public/css/base.css
* { margin: 0;
    padding: 0;
    box-sizing: border-box;
}

form button {
    width: 9%;
    background: rgb(255, 49, 49);
    border: none;
    padding: 10px;
    float: right;

}

body {
    font: 13px Helvetica,
    Arial;
}

form {
    background: #000;
    padding: 3px;
    position: fixed;
    bottom: 0;
    width: 100%;
}

form input {
    border: 0;
    padding: 10px;
    margin-right: .5%;
    width: 90%;

}

#messages {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.padding li {
    padding: 5px 10px;
    list-style-type: none;
}

#messages li:nth-child(odd) {
    background: #eee;
}

#messages li.connection:nth-child(odd) {
    background: rgba(255, 0, 0, 0.2);
}

#messages li.connection{
    background: rgba(255, 0, 0, 0.2);
}

#main{
    float: left;
    width: 87%;
    margin-right: 1%;
}

#right-panel{
    width: 12%;
    right: 0px;
    position: fixed;
}

#userbase{
    min-width: initial;
}

#userbase li:nth-child(odd){
    background-color: rgba(0, 255, 255, 0.2);
}

#messages li.user:nth-child(odd) {
    background-color: rgba(0, 255, 0, 0.21);
}

#messages li.user{
    background-color: rgba(0, 255, 0, 0.21);
}


#username{
    width: 10%;
    color: yellow;
}

